--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -20,8 +20,7 @@ h1 {
   margin-top: 60px;
 }
 
-h1,
-h2 {
+h1, h2 {
   font-weight: normal;
 }
 
@@ -36,5 +35,42 @@ li {
 }
 
 a {
-  color: #42b983;
+  color: #09012d;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Helvetica Neue", Helvetica, sans-serif; 
+}
+
+
+/*CSS Grid (for basic layout)*/
+
+@supports (grid-area: auto) {
+
+   #page {
+      max-width: 1240px;
+      margin: 0 auto;
+   }
+
+   #masthead {
+
+   }
+
+   nav {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+   }
+
+   #home-page {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 2;
+      article {
+
+         img {
+            max-width: 100%;
+         }
+      }
+   }
+
 }
